organised into 4x4 grid - need to fix spacing and positioning of everything next time

--- a/example/style.css
+++ b/example/style.css
@@ -1,4 +1,4 @@
-/* * {
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -23,4 +23,4 @@ body {
   position: relative;
   width: 100%;
   display: grid;
-} */
+}
