--- a/example2/style.css
+++ b/example2/style.css
@@ -34,14 +34,24 @@ body {
 }
 
 .memory-card {
-  width: 130px;
-  height: 200px;
-  margin: 5px;
-  position: relative;
+  height: 5rem;
+  width: 3.125rem;
+  /* padding: 50px; */
+  /* margin: 5px; */
+  padding-left: 2rem;
+  padding-right: 6rem;
+  padding-bottom: 0.625rem;
+  padding-top: 0.625rem;
+  display: flex;
+  justify-content: center;
+  /* align-items: center; */
+  /* flex-wrap: wrap;
+  position: relative; */
   transform: scale(1);
   transform-style: preserve-3d;
   transition: transform 0.5s;
   box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.3);
+  border: none;
   /* align-items: center; */
 }
 
@@ -56,14 +66,13 @@ body {
 
 .front-face,
 .back-face {
-  width: 100px;
-  height: 150px;
-  padding: 2px;
+  /* width: 8rem;
+  height: 12rem; */
+  /* padding: 2rem; */
   position: absolute;
   /* border-radius: 5px; */
   backface-visibility: hidden;
-  /* background: #51b7df; */
-  /* border: 2px solid deeppink; */
+  border: none;
 }
 
 .front-face {
@@ -71,22 +80,28 @@ body {
 }
 
 h2 {
-  font-size: 3rem;
+  font-size: 50px;
   color: black;
   text-transform: uppercase;
   letter-spacing: 0.1rem;
+  text-align: center;
 }
 
 .reset {
-  padding: 15px 20px;
+  height: max-content;
+  width: max-content;
+  padding: 10px 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: blue;
   background: white;
   border: none;
-  font-size: 1.5rem;
+  font-size: 1rem;
   letter-spacing: 0.1rem;
   text-transform: uppercase;
   cursor: pointer;
-  font-weight: 600;
+  font-weight: 700;
   /* align-items: flex-end; */
   /* justify-content: space-around; */
 }
@@ -96,16 +111,35 @@ h2 {
   background: blue;
 }
 
-.button {
+.wrapper {
+  box-sizing: border-box;
+  width: 40rem;
+  height: 35rem;
+  padding: 2.5rem 3rem;
+  background-color: #0071bc;
+  position: absolute;
+  transform: translate(-50%, -50%);
+  left: 50%;
+  top: 50%;
+  border-radius: 0.6rem;
+  box-shadow: 0 0.09rem 2.8rem rgba(86, 66, 0, 0.2);
+}
+.game-container {
+  position: relative;
+  width: 100%;
+  display: grid;
+}
+
+/* .button {
   position: relative;
   left: 50%;
   margin-top: 50%;
   justify-content: center;
-}
+} */
 
-.container {
+/* .container {
   background: #0071bc;
-}
+} */
 
 /* .container {
   margin: 0;
